--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -81,7 +81,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-        android:id="@+id/deleteButton"
+        android:id="@+id/refreshButton"
         style="@style/Widget.AppCompat.ImageButton"
         android:layout_width="48dp"
         android:layout_height="48dp"
@@ -89,16 +89,28 @@
         android:layout_marginEnd="16dp"
         android:background="@android:color/transparent"
         android:clickable="true"
-        android:contentDescription="delete drawing"
+        android:contentDescription="refresh drawings"
         android:focusable="true"
         android:foreground="?attr/selectableItemBackgroundBorderless"
         android:shadowColor="#000000"
         android:shadowDx="1.5"
         android:shadowDy="1.3"
         android:shadowRadius="1.6"
-        android:src="@drawable/ic_delete_black_24dp"
+        android:src="@drawable/ic_refresh_black_24dp"
         android:tint="?android:attr/textColorPrimaryInverse"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:progressTint="?android:attr/textColorPrimaryInverse"
+        android:indeterminateTint="?android:attr/textColorPrimaryInverse"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
